# pesto-reduction

./: .coverage  .gitignore  README.md  ReadMe  TESTING.md  Untitled.ipynb  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: ci.yml  coverage.yml  tests.yml
.ipynb_checkpoints/: Untitled-checkpoint.ipynb
src/pesto_reduction/: create_stack.py  flats.py  logger.py  mosaic.py  utils.py
src/pesto_reduction/cli/: create_flat.py  create_stack.py  download_index_files.sh  mosaic.py  optimize_bias.py
tests/: __init__.py  conftest.py  test_cli_create_flat.py  test_cli_create_stack.py  test_cli_mosaic.py  test_create_stack.py  test_create_stack_module.py  test_flats.py  test_mosaic.py  test_mosaic_advanced.py  test_utils.py
