[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pesto_reduction"                 # what “pip install” will see on PyPI
version = "0.1.0"                 # bump with each release
description = "Reduce Pesto"
authors = [{name = "Carter Rhea", email = "carterrhea93@gmail.com"}]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.21.0",
    "scipy>=1.7.0",
    "astropy>=5.0",
    "photutils>=1.8.0",
    "astroscrappy>=0.3.0",
    "dfreproject>=0.7.0",
    "scikit-image>=0.19.0",
    "joblib>=1.1.0",
    "matplotlib>=3.5.0",
]

[tool.setuptools]
package-dir = {"" = "src"}        # tell setuptools that packages live in src/

[tool.setuptools.packages.find]
where = ["src"]                   # auto-find any packages under src/

[project.scripts]
pesto-create-stack = "pesto_reduction.cli.create_stack:main"
pesto-mosaic = "pesto_reduction.cli.mosaic:main"
pesto-create-flat = "pesto_reduction.cli.create_flat:main"
pesto-optimize-bias = "pesto_reduction.cli.optimize_bias:main"

[project.optional-dependencies]
test = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-mock>=3.10",
]
